--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=app
 spring.datasource.url=jdbc:mysql://localhost:3306/atps?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdcb.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Config JPA
 spring.jpa.hibernate.ddl-auto=update
